--- a/.dbt-profile-example!/profiles.yaml
+++ b/.dbt-profile-example!/profiles.yaml
@@ -3,11 +3,11 @@ dev-inc:
   outputs:
     dev:
       type: postgres
-      host: http://localhost
-      user: dbt
+      host: localhost
+      user: dbt_user
       password: password
       port: 5432
-      dbname: postgres # or database instead of dbname
-      schema: public
+      dbname: example # or database instead of dbname
+      schema: source
       keepalives_idle: 0 # default 0, indicating the system default. See below
       connect_timeout: 10 # default 10 seconds
